Code Overflow fixed

--- a/assets/scss/_syntax.scss
+++ b/assets/scss/_syntax.scss
@@ -8,6 +8,7 @@
     padding: 1rem;
     background: var(--accent) !important;
     color: var(--text) !important;
+    overflow: auto;
     border-radius: 4px;
     max-width: 100%;
   }
